Disqualification enabled changes